--- a/bfl/users/static/users/main.css
+++ b/bfl/users/static/users/main.css
@@ -34,7 +34,7 @@
    background-color: rgba(0,0,0,0.25);
 }
 
-#session-nav {
+#workout-nav {
    background-color: rgba(0,0,0,0.25);
    padding: 1em 0.5em 1em 0.5em;
 }
@@ -49,7 +49,7 @@
   color: white;
 }
 
-#dropdownMenuLink:hover, .nav-link:hover, .settings-item:hover, .session-title-link:hover, .session-user-link:hover {
+#dropdownMenuLink:hover, .nav-link:hover, .settings-item:hover, .workout-title-link:hover, .workout-user-link:hover {
   color: gray;
   text-decoration: none;
 }
@@ -58,23 +58,23 @@
   color: black;
 }
 
-.session-title-link, .session-user-link {
+.workout-title-link, .workout-user-link {
   color: black;
   font-size: 1em;
 }
 
-.session-detail-user-link {
+.workout-detail-user-link {
   font-size: 1em;
   color: #fbde44;
   padding: -3em 3em 0 0;
 }
 
-.session-detail-user-link:hover {
+.workout-detail-user-link:hover {
   color: #e1bc05;
   text-decoration: none;
 }
 
-#session-menu {
+#workout-menu {
   padding-bottom: 3em;
 }
 
