--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -11,7 +11,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Static CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}?20201003">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
@@ -65,7 +65,7 @@
                 </li>
                 <li class="nav-item">
                   {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'session-list' %}">My Sessions</a>
+                    <a class="nav-link" href="{% url 'workout-list' %}">My Workouts</a>
                   {% endif %}
                 </li>
               </ul>
