--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -11,7 +11,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Static CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}?20201006">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
@@ -58,16 +58,19 @@
                     <a class="nav-link" href="{% url 'landing' %}">Home</a>
                   {% endif %}
                 </li>
+                {% if user.is_superuser %}
                 <li class="nav-item">
-                  {% if user.is_superuser %}
-                    <a class="nav-link" href="/admin/">Admin</a>
-                  {% endif %}
+                  <a class="nav-link" href="/admin/">Admin</a>
+                </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'my-workouts' %}">My Workouts</a>
                 </li>
                 <li class="nav-item">
-                  {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'my-workouts' %}">My Workouts</a>
-                  {% endif %}
+                  <a class="nav-link" href="{% url 'workout-select' %}">Add Workout</a>
                 </li>
+                {% endif %}
               </ul>
               <ul class="navbar-nav">
                 {% if user.is_authenticated %}
