--- a/bfl/users/templates/users/edit-workout-info.html
+++ b/bfl/users/templates/users/edit-workout-info.html
@@ -12,7 +12,10 @@
       <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
+          <legend class="border-bottom mb-4">General Workout Info</legend>
           {{ form | crispy }}
+          <legend class="border-bottom mb-4">Category Info</legend>
+          {{ cat_form | crispy }}
         </fieldset>
         <div class="form-group">
           <a class="btn btn-secondary" href="{% url 'settings' %}" role="button">Cancel</a>
