--- a/bfl/users/templates/users/edit-user-preferences.html
+++ b/bfl/users/templates/users/edit-user-preferences.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 class="page-title">Edit Workout Info</h1>
+      <h1 class="page-title">Edit User Preferences</h1>
     </div>
   </div>
   <div class="card">
@@ -12,9 +12,11 @@
       <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-          <legend class="border-bottom mb-4">General Workout Info</legend>
-          {{ form | crispy }}
-          <legend class="border-bottom mb-4">Category Info</legend>
+          <legend class="border-bottom mb-4">General User Information</legend>
+          {{ user_form | crispy }}
+          <legend class="border-bottom mb-4">Units of Measurement</legend>
+          {{ unit_form | crispy }}
+          <legend class="border-bottom mb-4">Hide Categories</legend>
           {{ cat_form | crispy }}
         </fieldset>
         <div class="form-group">
