--- a/bfl/users/templates/users/login.html
+++ b/bfl/users/templates/users/login.html
@@ -2,28 +2,34 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
-  <div class="row align-items-center">
-    <div class="col-sm-9">
-      <h1 class="page-title">
-        Login
-      </h1>
-    </div>
-    <div class="col-sm-3 text-right">
-      <a style="color: white;" href="{% url 'register' %}">Don't have an account?</a>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-          {{ form | crispy }}
-        </fieldset>
-        <div class="form-group">
-          <button class="btn form-button" type="submit">Login</button>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="row align-items-center">
+        <div class="col-md-8">
+          <h1 class="page-title">
+            Login
+          </h1>
         </div>
-      </form>
+        <div class="col-md-4 text-right">
+          <a style="color: white;" href="{% url 'register' %}">Don't have an account?</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+              {{ form | crispy }}
+            </fieldset>
+            <div class="form-group">
+              <button class="btn form-button" type="submit">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+    <div class="col-md-3"></div>
   </div>
 </div>
 {% endblock content %}
