--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -58,10 +58,16 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About Us</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Feedback</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://github.com/keanuwilliams/Billed-Fitness-Log" target="_blank">GitHub Repo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Support</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Terms & Conditions</a>
